# VUT-FIT-IFJ-Project

./: CMakeLists.txt  README.md  rozdeleni  scanner.c
doc/: LL rules
src/: Makefile  code_gen.c  code_gen.h  errors.h  expressions.c  expressions.h  main.c  param_list.c  param_list.h  parser.c  parser.h  postfix_data_managment.c  postfix_data_managment.h  scanner.c  scanner.h  string_dynamic.c  string_dynamic.h  sym_stack.c  sym_stack.h  symtable.c  symtable.h  system_func_generate.c  system_func_generate.h
testy/: run-tests.sh  scanner  scanner-tests  scanner-tests.c  scanner.c  scanner.h  set-outputs.sh
testy/inputs/: test_com_err.txt  test_com_err2.txt  test_com_err3.txt  test_comment.txt  test_float.txt  test_float_err.txt  test_id.txt  test_id_err.txt  test_idfunk.txt  test_int.txt  test_key.txt  test_string.txt  test_string1.txt  test_string_err.txt
testy/outputs/: test_com_err  test_com_err3  test_comment  test_float  test_float_err  test_id  test_id_err  test_int  test_key  test_string1  test_string_err  tests_string
testy/test_outputs/: test_com_err2_out.txt  test_com_err3_out.txt  test_comment_out.txt  test_float_err_out.txt  test_float_out.txt  test_id_err_out.txt  test_id_out.txt  test_idfunk_out.txt  test_string1_out.txt  test_string_err_out.txt  test_string_out.txt
